todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: local-persistent-storage
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
        - name: todo-app
          image: todo-app:v1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: local-persistent-storage
              mountPath: /usr/src/app/files
